# flow_chabot

./: README.md
api/: .env.example  .gitignore  clear.sh  flow.py  main.py  pyproject.toml  rag.py  testing.py
api/bruno/: api_chat.bru  api_health.bru  bruno.json  collection.bru  generate_token.bru  get_models.bru  get_providers.bru
api/bruno/environments/: local.bru
api/controllers/: APIController.py
api/models/: vector_model.py
api/services/: chat_service.py  flow_service.py  rag_service.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/components/: ChatBot.jsx  ChatInput.jsx  ChatMessage.jsx  Counter.jsx  FileUpload.jsx
frontend/src/pages/: index.astro
