[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.1",
    "fastapi[standard]>=0.118.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.30",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.35",
    "pyjwt>=2.10.1",
    "pypdf>=6.1.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "uvicorn>=0.37.0",
]
